argocd-ingress/base/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    contour-plus.cybozu.com/exclude: "true"
spec:
  virtualhost:
    fqdn: argocd.gcp0.dev-ne.co
    tls:
      secretName: argocd-server-tls
  routes:
    # For static files
    - conditions:
      - prefix: /
      services:
      - name: argocd-server-https
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    # For gRPC API
    - conditions:
      - prefix: /account.AccountService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /application.ApplicationService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /certificate.CertificateService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /cluster.ClusterService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /cluster.SettingsService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /project.ProjectService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /repocreds.RepoCredsService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /repository.RepoServerService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /repository.RepositoryService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /session.SessionService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
    - conditions:
      - prefix: /version.VersionService
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        response: 2m
        idle: 5m
