argocd-ingress/base/ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    contour-plus.cybozu.com/exclude: "true"
spec:
  virtualhost:
    fqdn: argocd.gcp0.dev-ne.co
    tls:
      secretName: argocd-server-tls
  routes:
    - match: /
      services:
      - name: argocd-server-https
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /cluster
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /session
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /account
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /repository
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /repocreds
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
    - match: /application
      services:
      - name: argocd-server
        port: 443
      timeoutPolicy:
        request: 2m
